--- a/01_Rodgers_Decline.Rmd
+++ b/01_Rodgers_Decline.Rmd
@@ -19,7 +19,7 @@ If people in the NFL still consider Rodgers a near top talent and PFF grade has 
 The Computer Cowboy's EPA + CPOE composite metric on [rbsdm.com](https://rbsdm.com/stats/stats/) ranked Rodgers as the 16th best since 2016, one spot below Ryan Fitzpatrick and three spots below Kirk Cousins. 
 
 ```{r pressure, echo=FALSE}
-knitr::include_graphics("C:/Users/ausryan/Desktop/MBA/packeRanalytics/98_proj/rodgers/git/Rodgers/rbsdm.png")
+knitr::include_graphics("path/98_proj/rodgers/git/Rodgers/rbsdm.png")
 ```
 
 [Football Outsiders DVOA](https://www.footballoutsiders.com/stats/nfl/qb/2019) placed Rodgers outside the top 10 in each of the last three seasons. [QBR](https://www.espn.com/nfl/qbr) lists Rodgers one spot below Andy Dalton in 2018 (16th) and one spot ahead of Jacoby Brissett in 2019 (20th).  
@@ -44,13 +44,13 @@ If you are not familiar with EPA, QBR, DVOA, or CPOE please check out the below.
   library(glue)
 
 # Set working directory
-  setwd("C:/Users/ausryan/Desktop/MBA/packeRanalytics/99_data/nflfastR")
+  setwd("path/99_data/nflfastR")
 
 # Read in all play by play data since 1999
   pbp <- readRDS("1999-2019_pbp_raw.rds")
 
 # Import team logos & colors
-  setwd("C:/Users/ausryan/Desktop/MBA/packeRanalytics/99_data/leesharpe")
+  setwd("path/99_data/leesharpe")
   df_logo_colors <- readRDS("df_logo_colors.rds")
   
 # Join team colors & logos with pbp data
@@ -58,7 +58,7 @@ If you are not familiar with EPA, QBR, DVOA, or CPOE please check out the below.
     inner_join(df_logo_colors, by = c("posteam" = "team"))  
 
 # Set working directory
-  setwd("C:/Users/ausryan/Desktop/MBA/packeRanalytics/98_proj/rodgers/git/Rodgers")  
+  setwd("path/98_proj/rodgers/git/Rodgers")  
   
 ```
 ```{r echo=FALSE, warning = FALSE, message=FALSE} 
